# Morse

./: fsd;hak.py  pyproject.toml  test.py
morsecode/: pyproject.toml
morsecode/src/morsecode/: gui.py
src/morsecode/: arduino_device.py  gui.py  gui_receive.py  gui_send.py  morsecode.py  receive.py  test.py
