[tool.poetry]
name = "morsecode"
version = "0.1.0"
description = ""
authors = ["fred <frederique.reijnders@student.uva.nl>"]
readme = "README.md"
packages = [{include = "morsecode", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
matplotlib = "^3.9.2"
pyvisa-py = "^0.7.2"
pyserial = "^3.5"
pyside6 = "^6.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
send_message = "morsecode.gui_send:main"
receive_message = "morsecode.gui_receive:main"