[tool.poetry]
name = "morsecode"
version = "0.1.0"
description = ""
authors = ["fred <frederique.reijnders@student.uva.nl>"]
readme = "README.md"
packages = [{include = "morsecode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
